--- a/index.html
+++ b/index.html
@@ -8,42 +8,39 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-     <div class="weather-container">
-    <div class="search-box">
-      <input type="text" class="locationInput" placeholder="Įveskite miestą..." id="city-input" />
-      <button id="search-btn">Ieškoti</button>
-      
-    </div>
-    <div class="city-selector">
-         <select id="city-select">
+    <div class="weather-container">
+      <div class="search-box">
+        <input type="text" class="locationInput" placeholder="Įveskite miestą..." id="city-input" />
+        <button id="search-btn">Ieškoti</button>
+      </div>
+      <div class="city-selector">
+        <select id="city-select">
           <option value="">Pasirinkite miestą</option>
-          
-      </select>
-  </div>
-
-    <div id="error-message" class="error-message"></div>  <!-- Klaidos pranešimas -->
-
-    <div class="weather-info">
-      <h2 id="city-name">Klaipėda</h2>
-      <p id="date">Pirmadienis, gegužės 12</p>
-
-      <div class="weather-icon">
-        🌧️ <span id="description">Lietus</span>
+          <!-- Сюда будет добавляться список городов -->
+        </select>
       </div>
 
-      <div class="temperature">
-        <span id="temperature">+16°C</span>
-        <small>Jaučiama: <span id="feels-like">+19°C</span></small>
-      </div>
+      <div id="error-message" class="error-message"></div>  <!-- Klaidos pranešimas -->
 
-      <div class="extra-info">
-        <p>💧 Drėgmė: <span id="humidity">78%</span></p>
-        <p>💨 Vėjas: <span id="wind">5 m/s</span></p>
+      <div class="weather-info">
+        <h2 id="city-name">Klaipėda</h2>
+        <p id="date">Pirmadienis, gegužės 12</p>
+
+        <div class="weather-icon">
+          🌧️ <span id="description">Lietus</span>
+        </div>
+
+        <div class="temperature">
+          <span id="temperature">+16°C</span>
+          <small>Jaučiama: <span id="feels-like">+19°C</span></small>
+        </div>
+
+        <div class="extra-info">
+          <p>💧 Drėgmė: <span id="humidity">78%</span></p>
+          <p>💨 Vėjas: <span id="wind">5 m/s</span></p>
+        </div>
       </div>
     </div>
-  </div>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
-
-
